# TLExercise

./: .gitignor  README.md  pyproject.toml
solution/: Q1.docx
solution/api_automation/: Q3.docx  __test_network_ip.py  fixtures.py  ipInfoApi.py  test_external_ip.py  test_google_dns_ip.py  test_internal_ip.py  test_invalid_ip.py
solution/max_single_digit/: maxSingle.py  test_max_single.py
solution/web_automation/: MyExpect.py  Q2.docx  test_web.py  webProduct.py
